--- a/style.css
+++ b/style.css
@@ -23,3 +23,68 @@
   font-size: 32px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.sign-in {
+  position: absolute;
+  width: 74px;
+  height: 48px;
+  left: 1223px;
+  top: 26px;
+  position: absolute;
+  width: 120px;
+  height: 50px;
+  left: 1200px;
+  top: 24px;
+  border: 2px solid #CD6326;
+  box-sizing: border-box;
+  border-radius: 5px;
+  color: white;
+  z-index: 1;
+  text-align: center;
+  line-height: 27px;
+  font-size: 23px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: transparent;
+  }
+.blog {
+position: absolute;
+width: 50px;
+height: 60px;
+left: 840px;
+top: 19px;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 23px;
+line-height: 60px;
+z-index: 1;
+color: white;
+background-color: transparent;
+border: 0px;
+}
+.contacts {
+position: absolute;
+width: 96px;
+height: 60px;
+left: 951px;
+top: 19px;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 23px;
+line-height: 60px;
+z-index: 1;
+color: white;
+background-color: transparent;
+border: 0px;
+}
+
+.magnifying-glass {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 38px;
+  right: 306px;
+  bottom: 719px;
+  left: 1111px;
+  border: 0px;
+  z-index: 1;
+  background-color: transparent;
+}
