--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 }
 .top-picture {
   position: absolute;
-  width: 68,2px;
-  height: 58,43px;
+  width: 68, 2px;
+  height: 58, 43px;
   z-index: 1;
   margin-top: 20px;
   margin-left: 121px;
@@ -21,7 +21,8 @@
   left: 205px;
   top: 30px;
   font-size: 32px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .sign-in {
   position: absolute;
@@ -34,7 +35,7 @@
   height: 50px;
   left: 1200px;
   top: 24px;
-  border: 2px solid #CD6326;
+  border: 2px solid #cd6326;
   box-sizing: border-box;
   border-radius: 5px;
   color: white;
@@ -42,38 +43,41 @@
   text-align: center;
   line-height: 27px;
   font-size: 23px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: transparent;
-  }
+}
 .blog {
-position: absolute;
-width: 50px;
-height: 60px;
-left: 840px;
-top: 19px;
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 23px;
-line-height: 60px;
-z-index: 1;
-color: white;
-background-color: transparent;
-border: 0px;
+  position: absolute;
+  width: 50px;
+  height: 60px;
+  left: 840px;
+  top: 19px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 23px;
+  line-height: 60px;
+  z-index: 1;
+  color: white;
+  background-color: transparent;
+  border: 0px;
 }
 .contacts {
-position: absolute;
-width: 96px;
-height: 60px;
-left: 951px;
-top: 19px;
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 23px;
-line-height: 60px;
-z-index: 1;
-color: white;
-background-color: transparent;
-border: 0px;
+  position: absolute;
+  width: 96px;
+  height: 60px;
+  left: 951px;
+  top: 19px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 23px;
+  line-height: 60px;
+  z-index: 1;
+  color: white;
+  background-color: transparent;
+  border: 0px;
 }
 
 .magnifying-glass {
@@ -85,6 +89,49 @@ border: 0px;
   bottom: 719px;
   left: 1111px;
   border: 0px;
-  z-index: 1;
-  background-color: transparent;
+  z-index: 2;
+}
+
+h1 {
+  position: absolute;
+  width: 199px;
+  height: 72px;
+  left: 120px;
+  top: 199px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 72px;
+  letter-spacing: 2px;
+  color: #cd6326;
+}
+
+.text-survival {
+  position: absolute;
+  width: 274px;
+  height: 108px;
+  left: 120px;
+  top: 322px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 27px;
+  color: #f7f7f7;
+}
+.donate {
+  position: absolute;
+  width: 160px;
+  height: 60px;
+  left: 120px;
+  top: 479px;
+  background-color: #CD6326;
+  border: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 23px;
+  line-height: 27px;
+  color: #f7f7f7;
+  border-radius: 5px;
 }
