--- a/style.css
+++ b/style.css
@@ -80,16 +80,22 @@
   border: 0px;
 }
 
-.magnifying-glass {
-  position: absolute;
+.magnifying-glass-img {
   width: 24px;
   height: 24px;
+  background-color: transparent;
+}
+
+.magnifying-glass {
+  position: absolute;
+  border: 0px;
+  z-index: 1;
   top: 38px;
   right: 306px;
   bottom: 719px;
   left: 1111px;
-  border: 0px;
-  z-index: 2;
+  width: 24px;
+  height: 24px;
 }
 
 h1 {
@@ -134,4 +140,25 @@ h1 {
   line-height: 27px;
   color: #f7f7f7;
   border-radius: 5px;
+}
+.articles {
+  position: absolute;
+  width: 324px;
+  height: 72px;
+  left: 558px;
+  top: 900px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 48px;
+  line-height: 72px;
+  text-align: center;
+  color: #333333;
+}
+
+.middle-of-site {
+  width: 1440px;
+  height: 1368px;
+  left: 0px;
+  top: 900px;
+  right: 0px;
+  background-color: #CCCCCC;
 }
