--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 * {
   margin: 0;
 }
+
+html, body {
+  width: 100%;
+}
+body {
+  position: relative;
+}
 .top-picture {
-  position: absolute;
+  /* position: absolute; */
   width: 68, 2px;
   height: 58, 43px;
   z-index: 1;
-  margin-top: 20px;
-  margin-left: 121px;
+  /* margin-top: 20px;
+  margin-left: 121px; */
 }
 .main-picture {
   position: absolute;
@@ -25,7 +32,6 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .sign-in {
-  position: absolute;
   width: 74px;
   height: 48px;
   left: 1223px;
@@ -33,8 +39,6 @@
   position: absolute;
   width: 120px;
   height: 50px;
-  left: 1200px;
-  top: 24px;
   border: 2px solid #cd6326;
   box-sizing: border-box;
   border-radius: 5px;
@@ -48,22 +52,15 @@
   background-color: transparent;
 }
 .blog {
-  position: absolute;
-  width: 50px;
-  height: 60px;
-  left: 840px;
-  top: 19px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 23px;
-  line-height: 60px;
   z-index: 1;
   color: white;
   background-color: transparent;
   border: 0px;
 }
 .contacts {
-  position: absolute;
   width: 96px;
   height: 60px;
   left: 951px;
@@ -81,21 +78,15 @@
 }
 
 .magnifying-glass-img {
+  background-color: transparent;
   width: 24px;
   height: 24px;
-  background-color: transparent;
 }
 
 .magnifying-glass {
-  position: absolute;
   border: 0px;
   z-index: 1;
-  top: 38px;
-  right: 306px;
-  bottom: 719px;
-  left: 1111px;
-  width: 24px;
-  height: 24px;
+  background-color: transparent;
 }
 
 h1 {
@@ -142,7 +133,7 @@ h1 {
   border-radius: 5px;
 }
 .articles {
-  position: absolute;
+  /* position: absolute; */
   width: 324px;
   height: 72px;
   left: 558px;
@@ -154,11 +145,29 @@ h1 {
   color: #333333;
 }
 
-.middle-of-site {
-  width: 1440px;
-  height: 1368px;
-  left: 0px;
-  top: 900px;
-  right: 0px;
+
+.main {
+  width: 100%;
   background-color: #CCCCCC;
+}
+
+.picture-container {
+  width: 100%;
+  height: 780px;
+}
+
+
+.middle-of-site {
+  width: 100%;
+  height: 1368px;
+}
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
