--- a/style.css
+++ b/style.css
@@ -8,70 +8,67 @@ html, body {
 body {
   position: relative;
 }
-.top-picture {
-  /* position: absolute; */
-  width: 68, 2px;
-  height: 58, 43px;
-  z-index: 1;
-  /* margin-top: 20px;
-  margin-left: 121px; */
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .main-picture {
-  position: absolute;
   width: 100%;
-  z-index: 0;
 }
-.header-text {
+.logo-text {
   color: white;
-  position: absolute;
-  z-index: 1;
-  left: 205px;
-  top: 30px;
   font-size: 32px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+.buttons-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 480px;
+}
 .sign-in {
-  width: 74px;
-  height: 48px;
-  left: 1223px;
-  top: 26px;
-  position: absolute;
   width: 120px;
   height: 50px;
   border: 2px solid #cd6326;
   box-sizing: border-box;
   border-radius: 5px;
   color: white;
-  z-index: 1;
+  background-color: transparent;
   text-align: center;
   line-height: 27px;
   font-size: 23px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: transparent;
 }
+button {
+  outline: none;
+}
+button {
+  cursor: pointer;
+}
+
 .blog {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 23px;
-  z-index: 1;
   color: white;
   background-color: transparent;
   border: 0px;
 }
+
 .contacts {
-  width: 96px;
-  height: 60px;
-  left: 951px;
-  top: 19px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 23px;
-  line-height: 60px;
-  z-index: 1;
   color: white;
   background-color: transparent;
   border: 0px;
@@ -83,14 +80,15 @@ body {
   height: 24px;
 }
 
-.magnifying-glass {
+.magnifying-glass-btn {
   border: 0px;
-  z-index: 1;
   background-color: transparent;
+  width: 24px;
+  height: 24px;
+  padding: 0;
 }
 
 h1 {
-  position: absolute;
   width: 199px;
   height: 72px;
   left: 120px;
@@ -106,7 +104,6 @@ h1 {
 }
 
 .text-survival {
-  position: absolute;
   width: 274px;
   height: 108px;
   left: 120px;
@@ -119,7 +116,6 @@ h1 {
   color: #f7f7f7;
 }
 .donate {
-  position: absolute;
   width: 160px;
   height: 60px;
   left: 120px;
@@ -156,18 +152,7 @@ h1 {
   height: 780px;
 }
 
-
 .middle-of-site {
   width: 100%;
   height: 1368px;
-}
-.header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
