--- a/style.css
+++ b/style.css
@@ -18,14 +18,13 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+.header-text {
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 32px;
+}
 .main-picture {
   width: 100%;
-}
-.logo-text {
-  color: white;
-  font-size: 32px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .buttons-bar {
   display: flex;
@@ -47,13 +46,17 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+.sign-in:active {
+  color: #cd6326;
+}
 button {
   outline: none;
-}
-button {
   cursor: pointer;
 }
-
+button:active {
+  cursor: grabbing;
+  transform: scale(0.9);
+}
 .blog {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -61,6 +64,9 @@ button {
   color: white;
   background-color: transparent;
   border: 0px;
+}
+.blog:active {
+  color: #CD6326;
 }
 
 .contacts {
@@ -72,6 +78,9 @@ button {
   color: white;
   background-color: transparent;
   border: 0px;
+}
+.contacts:active {
+  color: #cd6326;
 }
 
 .magnifying-glass-img {
@@ -129,7 +138,6 @@ h1 {
   border-radius: 5px;
 }
 .articles {
-  /* position: absolute; */
   width: 324px;
   height: 72px;
   left: 558px;
@@ -140,18 +148,14 @@ h1 {
   text-align: center;
   color: #333333;
 }
-
-
 .main {
   width: 100%;
   background-color: #CCCCCC;
 }
-
 .picture-container {
   width: 100%;
   height: 780px;
 }
-
 .middle-of-site {
   width: 100%;
   height: 1368px;
