--- a/style.css
+++ b/style.css
@@ -18,10 +18,18 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+.main {
+  display: flex;
+  flex-direction: column;
+  background-image: url(./assetes/Rectangle.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
 .header-text {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 32px;
+  font-weight: normal;
 }
 .main-picture {
   width: 100%;
@@ -31,6 +39,14 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 480px;
+  margin-right: 120px;
+}
+.logo-div {
+  width: 240px;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  margin-left: 122px;
 }
 .sign-in {
   width: 120px;
@@ -97,11 +113,8 @@ button:active {
   padding: 0;
 }
 
-h1 {
+.survival {
   width: 199px;
-  height: 72px;
-  left: 120px;
-  top: 199px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-style: normal;
@@ -123,6 +136,8 @@ h1 {
   font-size: 18px;
   line-height: 27px;
   color: #f7f7f7;
+  margin-top: 51px;
+  margin-bottom: 61px;
 }
 .donate {
   width: 160px;
@@ -139,24 +154,65 @@ h1 {
 }
 .articles {
   width: 324px;
-  height: 72px;
-  left: 558px;
-  top: 900px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 48px;
   line-height: 72px;
   text-align: center;
   color: #333333;
+  font-style: normal;
+  font-weight: normal;
 }
 .main {
   width: 100%;
   background-color: #CCCCCC;
 }
 .picture-container {
-  width: 100%;
-  height: 780px;
+  margin-left: 120px;
+  margin-top: 200px;
 }
 .middle-of-site {
   width: 100%;
   height: 1368px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 360px;
+}
+.breaking-news {
+  width: 332px;
+  font-size: 24px;
+  color: #666666; 
+  font-weight: normal;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.pictures-of-animals {
+  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 120px;
+}
+.arrow {
+  width: 26px;
+  height: 39px;
+  background-color: transparent;
+  border: 0px;
+}
+.arrow-button {
+  background-color: transparent;
+  border: 0px;
+}
+.animal {
+  transition: transform  300ms ease;
+}
+.animal:hover {
+  transform: scale(1.1);
+}
+.get-noficated {
+  width: 526px;
+  font-size: 27px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #333333;
+  margin-top: 239px;
 }
