--- a/style.css
+++ b/style.css
@@ -203,16 +203,75 @@ button:active {
   background-color: transparent;
   border: 0px;
 }
-.animal {
-  transition: transform  300ms ease;
-}
-.animal:hover {
-  transform: scale(1.1);
-}
 .get-noficated {
   width: 526px;
   font-size: 27px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #333333;
   margin-top: 239px;
+  font-weight: normal;
+}
+.animal-text {
+  align-items: center;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: normal;
+  color: #F7F7F7;
+  font-size: 17px;
+}
+.animal-heading {
+  align-items: center;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: normal;
+  color: #F7F7F7;
+  font-size: 22px;
+  margin-top: 247px;
+}
+.animal-div {
+  position: relative;
+  width: 300px;
+  height: 360px;
+  transition: transform  300ms ease;
+}
+.deer {
+  background-image: url("./assetes/Rectangle (3).png");
+}
+.squirrel {
+  background-image: url("./assetes/Rectangle (1).png");
+}
+.animal-div:hover {
+  transform: scale(1.1);
+}
+.bird {
+  background-image: url("./assetes/Rectangle (2).png");
+}
+.email-send {
+  display: flex;
+  margin-top: 61px;
+}
+.email {
+  background: #CCCCCC;
+  outline: 0;
+  width: 510px;
+  height: 60px;
+  border: #666666 1px solid;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 23px;
+  border-radius: 2px 0 0 2px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-right: 0;
+}
+.send {
+  width: 120px;
+  height: 64px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  align-items: center;
+  text-align: center;
+  background-color: #cd6326;
+  color: #F7F7F7;
+  font-size: 23px;
+  border-radius: 0 5px 5px 0;
+  border: 0;
 }
