--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  background-image: url(./assetes/Rectangle.png);
+  background-image: url(./assetes/Background-main.png);
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -68,6 +68,8 @@ body {
 button {
   outline: none;
   cursor: pointer;
+  border: 0;
+  background-color: transparent;
 }
 button:active {
   cursor: grabbing;
@@ -84,7 +86,6 @@ button:active {
 .blog:active {
   color: #CD6326;
 }
-
 .contacts {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -104,7 +105,6 @@ button:active {
   width: 24px;
   height: 24px;
 }
-
 .magnifying-glass-btn {
   border: 0px;
   background-color: transparent;
@@ -112,7 +112,6 @@ button:active {
   height: 24px;
   padding: 0;
 }
-
 .survival {
   width: 199px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -172,7 +171,6 @@ button:active {
 }
 .middle-of-site {
   width: 100%;
-  height: 1368px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -235,16 +233,16 @@ button:active {
   transition: transform  300ms ease;
 }
 .deer {
-  background-image: url("./assetes/Rectangle (3).png");
+  background-image: url("./assetes/Deer.png");
 }
 .squirrel {
-  background-image: url("./assetes/Rectangle (1).png");
+  background-image: url("./assetes/Squirrel.png");
 }
 .animal-div:hover {
   transform: scale(1.1);
 }
 .bird {
-  background-image: url("./assetes/Rectangle (2).png");
+  background-image: url("./assetes/Bird.png");
 }
 .email-send {
   display: flex;
@@ -262,6 +260,7 @@ button:active {
   padding-left: 15px;
   padding-right: 15px;
   border-right: 0;
+  margin-bottom: 239px;
 }
 .send {
   width: 120px;
@@ -274,4 +273,55 @@ button:active {
   font-size: 23px;
   border-radius: 0 5px 5px 0;
   border: 0;
+}
+.footer {
+  background-image: url(./assetes/Background-footer.png);
+  z-index: 5;
+  display: flex;
+  width: 100%;
+  height: 360px;
+  position: relative;
+  justify-content: space-around;
+}
+.footer-text {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 23px;
+  color: #F7F7F7;
+  background-color: transparent;
+}
+.footer-text:active {
+  transform: scale(0.9);
+  color: #cd6326;
+}
+.footer-text-wrap {
+  display: flex;
+  width: 480px;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo-div-footer {
+  width: 240px;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+.footer-buttons {
+  align-items: center;
+  width: 240px;
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 1060px) {
+  .picture-container {
+    margin-top: 100px;
+  }
+}
+@media screen and (max-width: 1220px) {
+  .pictures-of-animals {
+    flex-direction: column;
+    width: 100%;
+  }
+  .middle-of-site {
+    margin-top: 100px;
+  }
 }
