--- a/style.css
+++ b/style.css
@@ -139,8 +139,6 @@ button:active {
 .donate {
   width: 160px;
   height: 60px;
-  left: 120px;
-  top: 479px;
   background-color: #CD6326;
   border: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -290,7 +288,6 @@ button:active {
   font-size: 23px;
   color: #F7F7F7;
   background-color: transparent;
-  margin-left: 20px;
 }
 .footer-text:active {
   transform: scale(0.9);
@@ -315,6 +312,9 @@ button:active {
 }
 .social {
   width: 40px;
+}
+.text-footer{
+  margin-right: 85px;
 }
 @media screen and (max-width: 1060px) {
   .picture-container {
@@ -341,6 +341,9 @@ button:active {
   }
   .bird {
     margin-bottom: 20px;
+  }
+  .arrow {
+    transform: rotate(90deg);
   }
 }
 @media screen and (max-width: 860px) {
@@ -397,6 +400,83 @@ button:active {
 }
 @media screen and (max-width: 430px) {
   .email-send {
-    width: 200px;
+    width: 180px;
+    margin-right: 170px;
+  }
+  .text-footer {
+    margin-right: 30px;
+  }
+}
+@media screen and (max-width: 460px) {
+  .logo-picture {
+    width: 45px;
+  }
+  .header-text {
+    font-size: 22px;
+    margin-left: 10px;
+  }
+  .logo-div {
+    width: 120px;
+    display: flex;
+    justify-content: space-between;
+    margin-right: 40px;
+  }
+  .blog {
+    font-size: 18px;
+  }
+  .contacts {
+    font-size: 18px;
+  }
+  .magnifying-glass-img {
+    width: 15px;
+    height: 15px;
+  }
+  .sign-in {
+    width: 80px;
+    font-size: 18px;
+    height: 35px;
+  }
+  .header {
+    height: 60px;
+  }
+  .picture-container {
+    margin-top: 5px;
+    margin-right: 100px;
+  }
+  .survival {
+    font-size: 40px;
+  }
+  .text-survival {
+    font-size: 14px;
+  }
+  .donate {
+    width: 130px;
+    height: 40px;
+  }
+  .logo-div-footer {
+    width: 120px;
+  }
+  .footer-text-wrap {
+    margin: 0 30px 0 30px;
+  }
+  .footer-buttons {
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .survival {
+    font-size: 20px;
+  }
+  .text-survival {
+    font-size: 10px;
+  }
+  .donate {
+    width: 100px;
+    height: 30px;
+    font-size: 18px;
+  }
+  .picture-container {
+    height: 100px;
+    margin-top: 35px;
   }
 }
