--- a/style.css
+++ b/style.css
@@ -148,7 +148,6 @@ button:active {
   border-radius: 5px;
 }
 .articles {
-  width: 324px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 48px;
   line-height: 72px;
@@ -178,7 +177,6 @@ button:active {
   margin-top: 360px;
 }
 .breaking-news {
-  width: 332px;
   font-size: 24px;
   color: #666666; 
   font-weight: normal;
@@ -478,5 +476,11 @@ button:active {
   .picture-container {
     height: 100px;
     margin-top: 35px;
+  }
+  .email {
+    width: 200px;
+  }
+  .email-send {
+    margin-left: 50px;
   }
 }
